--- a/VRChat/62/1097662.html
+++ b/VRChat/62/1097662.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "vH8uzxNWJxTJsW0KV/vpe2v6AQrZGjbl4k6LE2fNAQQ="></script>
+    "FqfrCm9i35YY82NBmq5cZjCGj7C2l/qvrTd4cNrNl8E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター用アクセサリ】電飾ネコミミカチューシャSTRAC006-NM","description":"【VRアバター用アクセサリ】電飾ネコミミカチューシャSTRAC006-NM\n\n◆モデル概要◆\n\nモデル型式:STRAC006-NM\n作者:倭文(しとり)\n\n\n電飾でキラキラ光るネコミミカチューシャです。左右分離型。\nDynamicBoneを設定済みですので、DynamicBoneアセット(有料)を導入すればアバターの動きに合わせて揺れるようになっています。\nもちろん、ボーン無しでも揺れないだけで使用可能です。\n\n\n導入方法は、前作のピアスSTRAC001-Eとほぼ同じですので、そちらの導入説明書を参考にしてください。\n\n導入説明書は↓こちら\nhttp://toy-box.link/downloaddata/piercemanual.pdf\n\n少し違う部分は、分離型の為左右をまとめる親GameObjectを追加しているところです。\n上記4枚目の画像を見ていただけるとわかると思います。\n親オブジェクトで大まかな位置とサイズを決めて\n左右の本体で個別にサイズ、角度、位置を調整できます。\n\n◆仕様◆\n・ポリゴン数△278×2=△556ポリゴン\n\n※アクセサリを装着した状態でVRChatのアバター制限である20,000ポリゴンを越えた場合はアップロードすることができません。\n使用予定のアバターのポリゴン数をご確認のうえ、制限にかからないことをご確認下さい。\n\n\n◆必須前提◆\nUnity(2017.4.15f1)\nVRChatSDK\nDynamicBone(推奨)\n\n◆同梱してある使用シェーダーについて◆\n【Arktoon-Shaders / synqarkさん】\nsynqarkさん(twitter@synqark)がMITライセンスで公開しているUnlit系シェーダ。Booth上で無料配布されています。\n非常に優秀なシェーダですが、詳しい説明は\nhttps://packetbird.booth.pm/items/1027997\n↑こちらに掲載されています。\n\nシェーダは以下からもダウンロードできます。\nGithub: https://github.com/synqark/Arktoon-Shaders/releases/tag/0.9.1\nBooth(無料): https://packetbird.booth.pm/items/1027997 \n\n※unitypackageはシェーダ込み/なし の2種類を用意しています。\n既にarktoonシェーダをインストール済みのモデルに追加する場合はシェーダなしバージョンをご利用下さい。\n\n\n著作権は放棄していませんが、特に制限を設けようとも思いません。ご自由にお使い下さい。\nクレジット表記の必要はありませんが、紹介していただけると作者が喜びます。\n\nもし表記していただける場合は↓このように書いていただけると嬉しいです。\n\n作者名:『倭文』『しとり』『sitori』のいずれか\nTwitter:@toy_box_sitori\nHP：http://toy-box.link\n\n◆同梱データ◆\n\nモデルデータ(unityパッケージ)\n・strac006nm.unitypackage(シェーダなし)\n・strac006nm.unitypackage(シェーダ込み)\nテクスチャデータ(png)\nfbxデータ(xmascap.fbx)\n\n\n◆モデルに関する問題点やご指摘がありましたら◆\n\ntwitter: @toy_box_sitori\nメールアドレス: booth@toy-box.link\nまでご一報下さい。\n\n\n◆修正履歴◆\n\n◇2018.11.19◇\nVer.1.0.0 販売開始","url":"https://booth.pm/ja/items/1097662","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/1097662/5dda09da-1973-46ee-82c7-3fd4ef731cbf_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vH8uzxNWJxTJsW0KV/vpe2v6AQrZGjbl4k6LE2fNAQQ="></script>
+    nonce="FqfrCm9i35YY82NBmq5cZjCGj7C2l/qvrTd4cNrNl8E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -475,9 +475,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
