--- a/VRChat/17/1097517.html
+++ b/VRChat/17/1097517.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "vryP9zATDUfGTNRxhNly4avuQsBI2RiajkRW+yAvNlE="></script>
+    "Ui2Vg5XvezWIcm/6j7HUrGKuoRkHKlL/K56KOcsTpJw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ソーセージとミートボールの合成食物3Dアバター","description":"ソーセージとミートボールの合成食物アバターです。\n\n\n※この製品は一発ネタ的なアバターです!\n勘違いさせる可能性があるので、invite onlyもしくはfriendでお使いを推奨します。\nfriend+やpublicでの使用はお控えを推奨します。\n\n\n\n-本モデル、改造モデルを使用することによってトラブル、損失が生じたとしても一切責任を負いません\n自己責任でお願いします\n\n内容物\nmeatsoseji.blend\nmeatsoseji.fbx\nmeatsoseji.unitypackage\nreadme.txt\n\nVRChat用に制作していますが、それ以外のツールに使っても構いません。\n\n\n\n初めての配布なので、至らない点があれば報告お願い致します。\n\n4248ポリゴンです。","url":"https://booth.pm/ja/items/1097517","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/18fe7deb-8ddf-4ab5-996f-f15cb62623fc/i/1097517/eb487681-ca88-4aee-b0e9-afeb9d346fe3_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vryP9zATDUfGTNRxhNly4avuQsBI2RiajkRW+yAvNlE="></script>
+    nonce="Ui2Vg5XvezWIcm/6j7HUrGKuoRkHKlL/K56KOcsTpJw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -423,9 +423,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
