--- a/VRChat/41/1097441.html
+++ b/VRChat/41/1097441.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "EiIVcFk0y+6diDdLoMmN0iVxra48VVLY0/2sN1jW0Uk="></script>
+    "eKvug7GwMK5pVItPth3oZcD3RIfqbcszM6qosoW8mIs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おきゅたんbot VoicePack Vol.1","description":"おきゅみんのみんなから寄せられた「収録してほしいセリフ」を、「パルマ―！」とか「おきゅぅぅぅぅ！」ってどう言ったらいいの！？　と悪戦苦闘しながら深夜に収録した、おきゅたんbotの声データ集です！ \n\nHEARTalk用にいろんな声の高さのバリエーションが入ってたりも。\n\nやってみて声優さんは本当にすごいなって思いました。ノイズも入ってるけど、あまり気にしないでね。\n\nそれから、そうそう。マスコットアプリ文化祭2018には「VRすきまガールズ/おきゅたん」も参加しているので、よかったら作品作りに活用してみてくださーい！\nhttps://pronama.jp/2018/10/09/oculustan/\n\n\n-------------------------------------\n★ 利用条件について\n\n「おきゅたんbot VoicePack Vol.1」に入っている声データ一式は、アプリや動画、各種作品で商用、非商用問わず、下記条件の元、自由に使えるよ。\n\n・クレジット表記は不要だけど、作品のどこか、もしくはSNSなどで「おきゅたんbotのボイスファイル Vol.1」を使用したとか、リンクを示していただけるとハッピーだよ。\n\n・おきゅたんに関連した二次創作として利用する場合は、\nおきゅたんbot公式ページのQ\u0026Aのページを必ず確認して従ってね。\nhttps://ocutanbot.wixsite.com/ocutan/faq\n\n※二次創作に、とても優しい条件だよ。\n※応援したいので、作品についてのお知らせも大歓迎！\n\n・でもおきゅたんbotになりすましたり、公式作品と誤解するような利用や、キャラクターや関わる人、ファンを貶めたり迷惑行為をするのは悲しいのでやめてね。（ただ、わたしが冗談と笑える範囲だったり、おきゅたんbotとは別の存在とわかるような形で、ソーシャルVRやワールドなどで音声を利用したりはOKだよ）\n\n・おきゅたん/おきゅたんbot以外のキャラクターの声や\nナレーションとして使用してもいいよ？（使えるものならね！　おきゅっ）\n\n・反社会的な行為や宗教、政治的な主張を行う目的での利用は禁止だからね。\n\n・よく分からない点については気軽に相談してね。\n\n\n例）\n\nおきゅたん人形におきゅたんとしてしゃべらせる→OK\n\nアプリでおきゅたんbotがしゃべってるふうに演出する→OK\n\nおきゅたんアバターになり、おきゅたんbot本人のふりしてまわりに誤解させたままにする→NG\n\nおきゅたんアバターで一瞬本人に思わせて、実は違いまーす的な冗談として使う→OK\n\nワールドの仕掛けや音声案内に使う（使えるの？）→OK \n\n音楽素材に使う→OK\n\nおきゅたん以外の声として使う→OK\n\n迷惑行為に使う→NG\n\n聞いてほくそ笑む→OK💦","url":"https://booth.pm/ja/items/1097441","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1097441/8e224a0e-6066-4a53-90bb-be0da37d988e_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EiIVcFk0y+6diDdLoMmN0iVxra48VVLY0/2sN1jW0Uk="></script>
+    nonce="eKvug7GwMK5pVItPth3oZcD3RIfqbcszM6qosoW8mIs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -531,9 +531,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
