--- a/VRChat/96/1096096.html
+++ b/VRChat/96/1096096.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "aqmFrOfWajVXcJJyG9k/DR37Qs/S/yotOVttyJ4goK4="></script>
+    "5PUBte1AlxI0pvj9TBR5yjTe2l3X0QekRY5W6buOCGs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"こたつver1.2","description":"ジェネリックアバターでもワールドの設置物としても使える「こたつ」を作りました！\n\n冬の集まりにちょっと落ち着ける場所を用意してみませんか？\n\nこたつのみで△404ポリ(全付属品展開で△1736ポリ)\n\n【仕様メモ（2019/01/07　ver1.2）】\n\n・モデルのメッシュ分けを行いました。（みかん、湯呑、掛け布団が分離できます。）\n・机に足を追加しました。（シェイプキーで折りたためます）\n・カラーバリエーションを追加しました。（全５色になります）\n・座布団モデルを付属に追加しました。\n\n【仕様メモ（2018/１１/18　ver1.0）】\n販売開始","url":"https://booth.pm/ja/items/1096096","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1096096/8b9be9cd-1650-4f98-823e-2c3b4c6175d8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aqmFrOfWajVXcJJyG9k/DR37Qs/S/yotOVttyJ4goK4="></script>
+    nonce="5PUBte1AlxI0pvj9TBR5yjTe2l3X0QekRY5W6buOCGs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -424,9 +424,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
